# despesas_casa_backend

./: .gitignore  Cargo.toml  Rocket.toml  diesel.toml
migrations/2018-11-24-190658_create_users/: up.sql
migrations/2018-11-24-220051_initialize_users/: up.sql
migrations/2018-11-25-003107_create_expenses/: down.sql  up.sql
migrations/2019-03-20-192537_create_expense_user/: down.sql  up.sql
src/: main.rs
src/controllers/: expense.rs  mod.rs  user.rs
src/domain/models/: expense.rs  expense_user.rs  mod.rs  new_expense.rs  user.rs
src/domain/services/database/: mod.rs  schema.rs
src/models/: expense.rs  mod.rs  user.rs
src/responses/: base.rs  catchers.rs  mod.rs
