[package]
name = "rust-test"
version = "0.1.0"
authors = ["pedro-lopes-avnoconn <pedro.lopes@avnoconn.com>"]
edition = "2018"

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
