[package]
name = "despesas-casa-backend"
version = "0.1.0"
authors = ["nuwanda <plopes@ua.pt>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.1"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json"]
